# 17-fem1d-17-fem1d

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  advanced_problem.toml  cmake_toml11_example.txt  docker-compose.yml  entrypoint.sh  flexible_coefficients.toml  math_showcase.toml  my_project  parsecsv.py  plot.py  requirements.txt  run_good_examples.sh  run_speedup.sh  simple_1d.toml  simple_constants.toml  sol2d.vtu  test_configs.sh  unified_approach.toml
Google_tests/: CMakeLists.txt  Google_Tests_run  Makefile  Test.cpp
Google_tests/lib/: CTestTestfile.cmake  Makefile
Google_tests/lib/googlemock/: CTestTestfile.cmake  Makefile
Google_tests/lib/googletest/: CTestTestfile.cmake  Makefile
config/: advection_diffusion.toml  cell_like_3d_td.toml  circle.toml  circle2.toml  complete_example_td.toml  debug_test.toml  diffusion_2d_td.toml  heat_conduction.toml  heat_equation_1d_td.toml  manufactured_3d_td.toml  nonlinear_coefficients.toml  oscillatory_problem.toml  poisson.toml  polynomial_3d_td.toml  problem_1d.toml  problem_2d.toml  reaction_diffusion_1d.toml  ring2d_td_center_00.toml  ring_center_05_05.toml  sinusoidal_1d_td.toml  test3d.toml  test_simple.toml  transport_dominated.toml  variable_coefficients.toml  wobble_2d_td.toml
config/convergence-analysis/: square-h00125.toml  square-h0025.toml  square-h005.toml  square-h01.toml
config/good-examples/: README.md  exponential_2d.toml  exponential_3d.toml  gaussian_3d.toml  gaussian_bump_2d.toml  longer_sinusoidal_1d.toml  mixed_bc_1d.toml  mixed_bc_3d.toml  polynomial_1d.toml  polynomial_2d.toml  polynomial_3d.toml  sinusoidal_1d.toml  trigonometric_2d.toml  trigonometric_3d.toml  variable_coeffs_2d.toml
config/speedup-analysis/: cube-05.toml  cube-10.toml  cube-20.toml  cube-40.toml
convergence-analysis/: plot.py  run_convergence.sh
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
include/: SparseMatrix.hpp  bctype.hpp  boundary_cond.hpp  boundary_conditions.hpp  boundary_conditions.tpp  boundary_conditions_td.hpp  boundary_conditions_td.tpp  cell.hpp  config.hpp  fem.hpp  fem1d.hpp  fem2d.hpp  fem_td.hpp  function.hpp  function.tpp  grid.hpp  grid1D.hpp  grid2D.hpp  matrix.hpp  phi_function.hpp  phi_function2d.hpp  point.hpp  problem_factory.hpp  quadrature.hpp  thomas.hpp  vector.hpp
mesh/: mesh-cube-10_gmsh22.msh  mesh-square-5_gmsh22  mesh-square-h0.012500_gmsh22.msh  mesh-square-h0.025000_gmsh22.msh  mesh-square-h0.050000_gmsh22.msh  mesh-square-h0.100000_gmsh22.msh  msh_AnyTo22.py
output/: advection_diffusion.vtu  heat_conduction.vtu  poisson_test.vtu  test3d_test.vtu
scripts/: clear_and_build.sh  plot_sol.py  quadrature_from_skfem.py  run_all_configs.sh  run_good_examples.sh  test_configs.sh
speedup_analysis/: parsecsv.py  plot.py  run_speedup.sh  speedup_plot.py
src/: SparseMatrix.cpp  TomlMain.cpp  UltraSimpleTest.cpp  boundary_conditions.cpp  boundary_conditions_td.cpp  cell.cpp  config.cpp  config_toml11.cpp  fem.cpp  fem1d.cpp  fem2d.cpp  fem_td.cpp  function.cpp  grid.cpp  grid1D.cpp  grid2D.cpp  main.cpp  main_td.cpp  matrix.cpp  phi_function.cpp  phi_function2d.cpp  quadrature.cpp  thomas.cpp  vector.cpp
test/: boundary_conditions.cpp  fem.cpp  fem1d.cpp  function.cpp  grid2d.cpp  quadrature.cpp  test_fem1d.cpp  vector.cpp
